<unreleased>
* Update make_installer.sh
* Use QStandardPaths::AppDataLocation like appDirPath

v0.12.24

* Update make_installer.sh Update new components


v0.12.23

+ Add libraries dependencies to Partial Updates


v0.12.22

+ Add Partial Updates


v0.12.21

* Update make_installer.sh for Installer Binary Online on Windows
+ Add Repository Online to GH-Pages


v0.12.20

+ Add make_installer.sh for Installer Binary Offline on Windows
+ Add dependencies to installer Offline
+ Add Shortcut and RunProgram to installer Offline 
* Dont show Help if picta-dl is set true as environment variable


v0.12.19

* Change QStandardPaths::AppDataLocation for QCoreApplication::applicationDirPath
- Delete MainWindow::checkExistenceOfMainProcess
+ Add Components to cu.pictadl.gui Package
  * Add cu.pictadl.cli component
  * Add cu.pictadl.ffmpeg component


v0.12.18

+ Added makerpm.sh
* Update deployment scripts for GNU/Linux
  * Add picta-dlg launcher bash script
* Updated makedeb.sh and makerpm.sh
* Add Visual Studio Code folder
* Add Qt Installer Framework folder in deployment


v0.12.17

+ Added support for YouTube download (youtube.com, youtu.be, m.youtube.com).
* It is only necessary to configure Picta username and password for Playlist downloads, whether from the site or personal.
* Updated Frequently Asked Questions and Answers (F.A.Q)
  Explains how to use the GUI in 32-bit versions of Windows
* Add Spec for openSUSE in deployment


v0.12.16

* Update picta-dl.dll to x86


v0.12.15

* Enable support to Youtube URLs
* Marge Format Selection between Picta and Youtube
* Fix the Video Quality for Youtube


v0.12.14

* Updates Depends for Debian control
* Update README.md
+ Add picta-dl-gui.svg
* Update .pro
+ Add Bouml .prj and .png to docs
* Fix QPalette::ToolTipText in Dark styles
+ Add PDLG_DARK environment variable to set Dark styles


v0.12.13

* Update Debianized folder
* Update .pro
* Update Release workflow


v0.12.12

* Add logs to makedeb.sh
* Update Release workflow